--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "phantomnet/laravel-ldap-provider",
-    "description": "A Laravel 4 wrapper for the integrating with LDAP directories",
-    "keywords": [ "laravel", "ldap", "server", "api" ],
+    "name": "phantomnet/ldap",
+    "description": "",
     "authors": [
         {
             "name": "Danny Weiner",
@@ -9,19 +8,21 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": ">=3.7.0"
+        "php": ">=5.3.0",
+        "illuminate/support": "4.1.*"
     },
     "autoload": {
         "classmap": [
+            "src/Phantomnet/Ldap/Bridge/Exceptions.php",
+            "src/Phantomnet/Ldap/Connections/Exceptions.php",
+            "src/Phantomnet/Ldap/Targets/Exceptions.php",
+            "src/Phantomnet/Ldap/Users/Exceptions.php",
+
             "src/migrations"
         ],
         "psr-0": {
-            "PhantomNet\\LdapProvider": "src/"
+            "Phantomnet\\Ldap\\": "src/"
         }
     },
-    "minimum-stability": "dev",
-    "license": "GPL-2.0+"
+    "minimum-stability": "stable"
 }
