--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "info@phantomnet.net"
         }
     ],
+    "license": "GPL-2.0",
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.1.*"
